# gsheet-fetch

./: .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  pylintrc  pyproject.toml
fetch/: __init__.py  config.py  fetchers.py  main.py  utilities.py
fetch/sql/: create_latest_home_data.sql  create_raw_home_data.sql  create_record_changelog.sql  insert_changelog_entry.sql  insert_raw_home_data.sql
scripts/: deploy.sh
